added maven config to new source/test directories

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>src/main/groovy</sourceDirectory>
+        <testSourceDirectory>src/test/groovy</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
